--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,6 +105,12 @@
                     <button class="sidebar-item" onclick="fileManager.showRecentFiles()">
                         <i class="fas fa-clock"></i> 最近使用
                     </button>
+                    <button class="sidebar-item" onclick="shareManager.showMyShares()">
+                        <i class="fas fa-share-alt"></i> 我的分享
+                    </button>
+                    <button class="sidebar-item" onclick="helpManager.showShareHelp()">
+                        <i class="fas fa-question-circle"></i> 分享帮助
+                    </button>
                     <button class="sidebar-item" onclick="fileManager.showSyncStatus()">
                         <i class="fas fa-sync"></i> 同步状态
                     </button>
@@ -189,6 +195,8 @@
     <script src="js/fileManager.js"></script>
     <script src="js/uploadManager.js"></script>
     <script src="js/syncManager.js"></script>
+    <script src="js/shareManager.js"></script>
+    <script src="js/helpManager.js"></script>
     <script src="js/hashCalculator.js"></script>
     <script src="js/app.js"></script>
 </body>
